--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,173 @@
-.App {
-  text-align: center;
+@font-face {
+    font-family: "Bungee-Regular";
+    src: local('BungeeOutline-Regular'), url(./fonts/Bungee-Regular.ttf) format('truetype');
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@import url('https://fonts.googleapis.com/css?family=Bungee:300, 400');
+body {
+    font-family: "Open Sans", serif;
+    background: linear-gradient(to right, seagreen #e74c3c);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.wrapper {
+    background: linear-gradient(to right, darkgrey);
+    background-color: darkorange;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.main {
+    height: 90vh;
+    background: #fff;
+    box-shadow: 0px 13px 40px -13px rgba(0, 0, 0, 0.75);
+    width: 80%;
+    margin: 25px auto;
 }
 
-.App-link {
-  color: #61dafb;
+.title-container {
+    height: 17vh;
+    min-height: 100%;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: red;
+    background-color: lightblue;
+    font-family: "Bungee-Regular";
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title-container__title {
+    font-size: 50px;
+    letter-spacing: 2px;
+    line-height: 1.3;
+}
+
+.title-container__subtitle {
+    font-style: italic;
+    font-weight: 100;
+    letter-spacing: 1px;
+    line-height: 1.5;
+}
+
+.form-container {
+    background-color: darkslategray;
+    height: 70vh;
+    padding-top: 50px;
+    padding-left: 50px;
+}
+
+input[type="text"] {
+    background-color: transparent;
+    border: 0;
+    border-bottom: solid 1px #f16051;
+    width: 30%;
+    padding-bottom: 4px;
+    color: #fff !important;
+    font-weight: lighter;
+    letter-spacing: 2px;
+    margin-bottom: 30px;
+    margin-right: 20px;
+    font-size: 20px;
+    font-family: 'Bungee-Regular';
+}
+
+input[type="text"] {
+    outline: none;
+}
+
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 30px #2c3e50 inset;
+    -webkit-text-fill-color: #fff !important;
+}
+
+button {
+    border: 0;
+    padding: 8px 20px;
+    margin: 0 2px;
+    border-radius: 2px;
+    font-weight: lighter;
+    letter-spacing: 1px;
+    font-size: 15px;
+    cursor: pointer;
+    background-color: #f16051;
+    color: blanchedalmond;
+    font-weight: 100;
+    font-family: 'Bungee-Regular';
+}
+
+button:active {
+    outline: none;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+.weather__info {
+    width: 100%;
+    font-size: 40px;
+    font-weight: 200;
+    letter-spacing: 2px;
+}
+
+.weather__key {
+    color: #f16051;
+    border-bottom: solid 2px rgba(255, 255, 255, 0.06);
+    padding: 20px 0 20px 0;
+    font-weight: 400;
+}
+
+.weather__key:last-child {
+    border: 0;
+}
+
+.weather__value {
+    color: #fff;
+    font-weight: 200;
+    font-size: large;
+}
+
+.weather__error {
+    color: #f16051;
+    font-size: 20px;
+    letter-spacing: 1px;
+    font-weight: 200;
+}
+
+@media screen and (max-width: 700px) {
+    .title-container__title {
+        font-size: 30px;
+    }
+    .title-container__subtitle {
+        font-size: 18px;
+    }
+    .form-container {
+        padding-top: 30px;
+    }
+    .weather__info {
+        width: unset;
+        font-size: 40px;
+    }
+    .weather__key {
+        padding: 4px 0 4px 0;
+    }
+    input[type="text"] {
+        margin-bottom: 10px;
+    }
+    button {
+        padding: 4px 10px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .title-container__title {
+        font-size: 25px;
+    }
+    .title-container__subtitle {
+        font-size: 14px;
+    }
+    button {
+        padding: 2px;
+    }
 }
